--- a/src/Pages/projects/projects.css
+++ b/src/Pages/projects/projects.css
@@ -32,7 +32,7 @@
     transition: .3s ease;
 }
 
-.img_sec:hover .overlay {
+.project_card:hover .overlay {
     transform: scale(1);
 }
 
@@ -68,5 +68,9 @@
     
     .project_lists > div {
         margin-top: 30px;
+    }
+
+    h2 {
+        border-bottom: 3px solid #ef2d56;
     }
 }
