services page updated

--- a/src/Pages/services/services.css
+++ b/src/Pages/services/services.css
@@ -1,18 +1,15 @@
 .service-list {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.service-list > div {
-    flex: 1 1 auto;
-    margin: 10px;  /* and that, will result in a 10px gap */
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 10px;
+    grid-row-gap: 0px;
 }
 
 .service-item {
     background: var(--hero-bg-1);
-    padding: 30px;
-    height: 400px;
+    padding: 20px;
+    /* height: 400px; */
     border-radius: 5px;
     box-shadow: var(--light-shadow);
     transition: all .4s ease-in-out 0s;
@@ -20,7 +17,7 @@
 
 .service-title{
     margin: 10px auto;
-    color: #ef2d56;
+    color: #fff;
 }
 
 .service-item:hover {
